Fix component height on mobile devices

--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -1,7 +1,11 @@
 .root {
   color: var(--text-primary-color);
   background-color: var(--bg-primary-color);
-  height: 100vh;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   padding-top: 100px;
 }
 
