--- a/src/variables.css
+++ b/src/variables.css
@@ -2,5 +2,6 @@
   --inter-orange: #ff7a00;
   --text-primary-color: #455a64;
   --text-secondary-color: #607d8b;
+  --text-highlight-color: #90a4ae;
   --bg-primary-color: #f9f9f9;
 }
